Aress7/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Labour_Budget__c</fullName>
        <formula>IF(ISPICKVAL(Quote_1_Chosen__c, &quot;1&quot;), Labour_Cost__c, Labour_Cost_2__c)/(1+Contingency_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Cost_2__c</fullName>
        <label>Labour Cost 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Cost__c</fullName>
        <label>Labour Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Planned__c</fullName>
        <formula>MAX( Planned_Duration__c , Timesheet_Duration__c ) *40 + (max ( Planned_Duration_GWs__c , Timesheet_Duration_GWs__c )*22.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Rounded_1__c</fullName>
        <label>Labour (Rounded) 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labour_Rounded_2__c</fullName>
        <label>Labour (Rounded) 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Case_Owner_Change_Date__c</fullName>
        <label>Last Case Owner Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Leasing_Companies__c</fullName>
        <label>Leasing Companies</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Vehicle_Leased__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALD Automotive</fullName>
                </value>
                <value>
                    <fullName>Arval</fullName>
                </value>
                <value>
                    <fullName>Balgores Leasing</fullName>
                </value>
                <value>
                    <fullName>CC Leasing</fullName>
                </value>
                <value>
                    <fullName>Free2Move</fullName>
                </value>
                <value>
                    <fullName>Fuel Included</fullName>
                </value>
                <value>
                    <fullName>GKL Leasing</fullName>
                </value>
                <value>
                    <fullName>Inchcape</fullName>
                </value>
                <value>
                    <fullName>LeasePlan</fullName>
                </value>
                <value>
                    <fullName>Lex Autolease</fullName>
                </value>
                <value>
                    <fullName>Ogilvie</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SG Fleet Leasing</fullName>
                </value>
                <value>
                    <fullName>TCH Leasing</fullName>
                </value>
                <value>
                    <fullName>Total Motion</fullName>
                </value>
                <value>
                    <fullName>Tusker</fullName>
                </value>
                <value>
                    <fullName>VWFS</fullName>
                </value>
                <value>
                    <fullName>Zenith</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIS_Contact_Phone_Number__c</fullName>
        <label>MIS Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MIS_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://manage.pod-point.com/units?page=1&amp;column=pod_units.date_commissioned&amp;direction=desc&amp;search=&quot;&amp; Unit_PSL_PG_Number__c ,&quot;https://manage.pod-point.com/units?page=1&amp;column=pod_units.date_commissioned&amp;direction=desc&amp;search=&quot;&amp; Unit_PSL_PG_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MIS Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Site_Contact_Email__c</fullName>
        <description>Site contact email  to appear on the MIS</description>
        <label>MIS Site Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Site_Contact__c</fullName>
        <description>Name of person you would like to make a contact on the MIS.</description>
        <label>MIS Site Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Site_Name__c</fullName>
        <description>Site name to appear on the MIS</description>
        <label>MIS Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_unit_location__c</fullName>
        <description>Brief description on where units are located</description>
        <label>MIS unit location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MPAN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MPAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Arrival_Window_End_Time__c</fullName>
        <description>Maintenance Arrival Window End Time</description>
        <label>Maintenance Arrival Window End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Arrival_Window_Start_Time__c</fullName>
        <description>Maintenance Arrival Window Start Time</description>
        <label>Maintenance Arrival Window Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Description__c</fullName>
        <label>Maintenance Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Proposed_Solution__c</fullName>
        <label>Maintenance Proposed Solution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work Card 1 - No Lights</fullName>
                </value>
                <value>
                    <fullName>Work Card 2 - Lights</fullName>
                </value>
                <value>
                    <fullName>Work Card 3 - No Comms</fullName>
                </value>
                <value>
                    <fullName>Work Card 4 - Wrong Speed</fullName>
                </value>
                <value>
                    <fullName>Work Card 5 - Damage</fullName>
                </value>
                <value>
                    <fullName>Work Card 6 - Trapped Cable</fullName>
                </value>
                <value>
                    <fullName>PCB Swap</fullName>
                </value>
                <value>
                    <fullName>Cable Swap</fullName>
                </value>
                <value>
                    <fullName>RCBO Reset</fullName>
                </value>
                <value>
                    <fullName>Power Cycle</fullName>
                </value>
                <value>
                    <fullName>Up-Rating Unit(s)</fullName>
                </value>
                <value>
                    <fullName>Router Swap</fullName>
                </value>
                <value>
                    <fullName>Post-Install Survey</fullName>
                </value>
                <value>
                    <fullName>Changing a Key Lock</fullName>
                </value>
                <value>
                    <fullName>Decal Change</fullName>
                </value>
                <value>
                    <fullName>Unit Swap</fullName>
                </value>
                <value>
                    <fullName>Maintenance Action - Other</fullName>
                </value>
                <value>
                    <fullName>Arch 1 - 2 Swapout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Report__c</fullName>
        <defaultValue>&quot;PSL/PG - &quot; &amp; BR()&amp;
&quot;Reported By - &quot; &amp; BR()&amp;
&quot;Date of install - &quot; &amp; BR()&amp; 

&quot;Select fault from 5 options below and answer ALL applicable questions:&quot; &amp; BR()&amp; BR()&amp; 

&quot;1. Issue with LIGHTS still on POD Point?&quot; &amp; BR()&amp;
&quot;RCD reset performed - &quot; &amp; BR()&amp;
&quot;MIS reset performed - &quot; &amp; BR()&amp;
&quot;User error assessed - &quot; &amp; BR()&amp;
&quot;Light colour whilst unplugged - &quot; &amp; BR()&amp;
&quot;Light colour whilst plugged - &quot; &amp; BR()&amp;
&quot;Flashing green - does their cable work elsewhere- &quot; &amp; BR()&amp;
&quot;Is it connected to wifi? &quot; &amp; BR()&amp;
&quot;Time since last charge on MIS -  &quot;&amp; BR()&amp; BR()&amp;

&quot;2. No lights?&quot;  &amp; BR()&amp;
&quot;Has the RCD tripped- &quot; &amp; BR()&amp;
&quot;Does the unit power back on when RCD reset- &quot; &amp; BR()&amp;
&quot;Does it trip again,after how long- &quot;&amp; BR()&amp;
&quot;Is there a known light sequence before tripping- &quot; &amp; BR()&amp;
&quot;Does it trip regularly- &quot; &amp; BR()&amp;
&quot;User error assessed - &quot; &amp; BR()&amp;
&quot;RCD reset performed - &quot; &amp; BR()&amp;
&quot;MIS reset performed - &quot; &amp; BR()&amp;
&quot;Commercial - Status report received door A (or solo unit) - &quot; &amp; BR()&amp;
&quot;Commercial - Status report received door B - &quot; &amp; BR()&amp;
&quot;Time since last charge on MIS(Commercial - Door A and B)&quot; &amp; BR()&amp;
&quot;No status report or recent charge = straight to scheduler&quot; &amp; BR()&amp; BR()&amp;

&quot;3. Charging slow?&quot; &amp; BR()&amp;
&quot;Only on this POD Point, or others also- If others, request customer to try on another charger and report back &quot; &amp; BR()&amp;
&quot;Connected to Wifi - &quot; &amp; BR()&amp;
&quot;Time and date of charge-&quot; &amp; BR()&amp; BR()&amp;

&quot;4. No Wifi&quot; &amp; BR()&amp;
&quot;Arch 1 - RCD reset and send status report, returned (1h) - &quot; &amp; BR()&amp;
&quot;Arch 2: - &quot; &amp; BR()&amp; 
&quot;Are they connected- &quot; &amp; BR()&amp;
&quot;Can they see any network names? or everyone&apos;s but theirs? &quot; &amp; BR()&amp;
&quot;Manual ‘how to connect to wifi?’ attempted- &quot; &amp; BR()&amp;
&quot;Software version- &quot; &amp; BR()&amp;
&quot;Type of Network (2.4Ghz/5Ghz)- &quot; &amp; BR()&amp;
&quot;Brand of router- &quot; &amp; BR()&amp;
&quot;Repeater (Yes/No)- &quot; &amp; BR()&amp; BR()&amp;

&quot;5. Other&quot;&amp; BR()&amp;
&quot;Please describe error - &quot; &amp; BR()&amp;
&quot;RCD reset performed - &quot;&amp; BR()&amp;
&quot;MIS reset performed - &quot; &amp; BR()&amp;
&quot;User error assessed - &quot; &amp; BR()&amp;
&quot;Light colour whilst unplugged - &quot; &amp; BR()&amp;
&quot;Light colour whilst plugged - &quot; &amp; BR()&amp;
&quot;Is it connected to wifi- &quot; &amp; BR()&amp;
&quot;Time since last charge on MIS - &quot; &amp; BR()&amp; BR()</defaultValue>
        <label>Maintenance Report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Scheduled_Start_Date_Time__c</fullName>
        <description>Maintenance Scheduled Start Date &amp; Time</description>
        <label>Maintenance Scheduled Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maintenance_Status__c</fullName>
        <label>Maintenance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Symptom__c</fullName>
        <inlineHelpText>Please describe the lights visible and behavior of the Pod.</inlineHelpText>
        <label>Maintenance Symptom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Visit_Type__c</fullName>
        <label>Maintenance Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnostic Maintenance</fullName>
                </value>
                <value>
                    <fullName>Part(s) Upgrade</fullName>
                </value>
                <value>
                    <fullName>Installation Issue</fullName>
                </value>
                <value>
                    <fullName>Arch 1 - 2 Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Cost_2__c</fullName>
        <label>Material Cost 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Costs__c</fullName>
        <label>Material Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Spend__c</fullName>
        <label>Material Spend</label>
        <summarizedField>Case_Equipment__c.Spend_Total_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Equipment__c.Spend_Category__c</field>
            <operation>equals</operation>
            <value>Installers - Materials for Installation</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Equipment__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Materials_Budget__c</fullName>
        <formula>IF(ISPICKVAL(Quote_1_Chosen__c, &quot;1&quot;), Material_Costs__c, Material_Cost_2__c)/(1+Contingency_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Materials Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Materials_Cost_Option_1__c</fullName>
        <label>Materials Cost Option 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Materials_Cost_Option_2__c</fullName>
        <label>Materials Cost Option 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meter_Photo_Link__c</fullName>
        <label>Meter Photo - Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Meter_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meter Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Install_Picklist__c</fullName>
        <label>Non-Standard Install</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Install_Type__c</fullName>
        <label>Non-Standard Install Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-install Site Survey</fullName>
                </value>
                <value>
                    <fullName>Pre-install Remote Survey</fullName>
                </value>
                <value>
                    <fullName>On-site Extra Work</fullName>
                </value>
                <value>
                    <fullName>On-site Survey &amp; Rescheduled Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Standard Install (Old)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Quote_Amount__c</fullName>
        <label>Non-Standard Quote Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Standard Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLEV_Docs_Checker__c</fullName>
        <label>OLEV Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Laura Platipodis</fullName>
                </value>
                <value>
                    <fullName>Pritam Vekaria</fullName>
                </value>
                <value>
                    <fullName>Curtis Holland</fullName>
                </value>
                <value>
                    <fullName>Luke Abbott</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OLEV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OLEV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTD_NS_Follow_Up_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OTD NS Follow Up Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Pending_Date__c</fullName>
        <label>Open/Pending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>OpportunityID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage (old)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Developing Proposal</fullName>
                </value>
                <value>
                    <fullName>Awaiting Sign Off</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Nurture - No Contact</fullName>
                </value>
                <value>
                    <fullName>Nurture - Still Researching</fullName>
                </value>
                <value>
                    <fullName>Nurture - Awaiting Vehicle</fullName>
                </value>
                <value>
                    <fullName>Ready to Invoice</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Survey Scheduled</fullName>
                </value>
                <value>
                    <fullName>Survey Complete</fullName>
                </value>
                <value>
                    <fullName>Survey Quoted</fullName>
                </value>
                <value>
                    <fullName>Survey Requested</fullName>
                </value>
                <value>
                    <fullName>Tender in Process</fullName>
                </value>
                <value>
                    <fullName>Install Scheduled</fullName>
                </value>
                <value>
                    <fullName>Install Complete</fullName>
                </value>
                <value>
                    <fullName>Install Requested</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Install Completed</fullName>
                </value>
                <value>
                    <fullName>Install Cancelled</fullName>
                </value>
                <value>
                    <fullName>Install On Hold</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Install Paused</fullName>
                </value>
                <value>
                    <fullName>Install Incomplete</fullName>
                </value>
                <value>
                    <fullName>Install Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_new__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordering_Tool_Customer_URL__c</fullName>
        <label>Ordering Tool Customer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ordering_Tool_URL__c</fullName>
        <label>Ordering Tool URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Outcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outcode</label>
        <referenceTo>Outcode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Budget__c</fullName>
        <formula>IF(ISPICKVAL(Quote_1_Chosen__c, &quot;1&quot;), PM_fee__c, PM_Fee_2__c)/(1+Contingency_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Fee_2__c</fullName>
        <label>PM Fee 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Notes__c</fullName>
        <label>Work Order Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_fee__c</fullName>
        <label>PM Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_provided_work_plan_information__c</fullName>
        <description>Pod Point Project Manager gave you a work plan and adequate information prior to starting work?</description>
        <label>PM provided adequate info before install</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE_Labour_2__c</fullName>
        <label>Electrical Labour 2 (hrs)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPE_Labour__c</fullName>
        <label>Electrical Labour (hrs)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Upload_Help__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photo Upload Help</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Duration_GWs__c</fullName>
        <label>Planned Duration (GWs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Duration__c</fullName>
        <label>Planned Duration (PPEs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pod_Location_Photo_Link__c</fullName>
        <label>Pod Location Photo - Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pod_Location_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pod Location Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amy Lambourne</fullName>
                </value>
                <value>
                    <fullName>Arne Nikolaus</fullName>
                </value>
                <value>
                    <fullName>Martin Miles</fullName>
                </value>
                <value>
                    <fullName>Richard Wise</fullName>
                </value>
                <value>
                    <fullName>Shauna Black</fullName>
                </value>
                <value>
                    <fullName>Bradley Turk</fullName>
                </value>
                <value>
                    <fullName>Joshua Doyle-Tanner</fullName>
                </value>
                <value>
                    <fullName>Kostas Papadakis</fullName>
                </value>
                <value>
                    <fullName>Alex McKinney</fullName>
                </value>
                <value>
                    <fullName>Stuart Clark</fullName>
                </value>
                <value>
                    <fullName>Richard Lindop</fullName>
                </value>
                <value>
                    <fullName>James Farrier</fullName>
                </value>
                <value>
                    <fullName>Sam Biggs</fullName>
                </value>
                <value>
                    <fullName>Richard King</fullName>
                </value>
                <value>
                    <fullName>Jagdish Nikam</fullName>
                </value>
                <value>
                    <fullName>Stephen Kellett</fullName>
                </value>
                <value>
                    <fullName>Christos Polydoros</fullName>
                </value>
                <value>
                    <fullName>Bryan Saignasith</fullName>
                </value>
                <value>
                    <fullName>Matt Preston</fullName>
                </value>
                <value>
                    <fullName>Cameron Mclean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_completed_to_standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project completed to standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Ownership_Link__c</fullName>
        <label>Proof of Ownership - Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Proof_of_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof of Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Bays_2__c</fullName>
        <label>Proposed Bays 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Proposed_Bays__c</fullName>
        <label>Proposed Bays</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Q_Additional_Information_Norway__c</fullName>
        <label>Q. Er det mer informasjon?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Building_Type_Norway__c</fullName>
        <label>Q. Type bolig</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Cable_Buried_Norway__c</fullName>
        <label>Q. Må det graves kabelgrøft?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Cable_Distance_Norway__c</fullName>
        <label>Q. Er kabel under 15 meter?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Cable_Length_Norway__c</fullName>
        <label>Q. Hvor lang kabel trengs?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Cable_Wall_Norway__c</fullName>
        <label>Q. Kabel legges i eksisterende trekkerør</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Grid_Type_Norway__c</fullName>
        <label>Q. Hvilken nettype har kunden?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Install_Height_Norway__c</fullName>
        <label>Q. Er installasjonen i høyde over 2,5m?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Permission_Norway__c</fullName>
        <label>Q. Har kunden tillatelse?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Pod_Location_Norway__c</fullName>
        <label>Q. Hvor skal Pod monteres?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_Transformer_Location_Norway__c</fullName>
        <label>Q. Hvor skal transformator plasseres?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_1_Chosen__c</fullName>
        <label>Quote Chosen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_to_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <formula>&quot;[ ref:_&quot; &amp; LEFT($Organization.Id,4) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; ) &amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(RIGHT(Id,6), &quot;0&quot;, &quot;0&quot; ) &amp; &quot;:ref ]&quot;</formula>
        <label>Reference Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Booking_Rating__c</fullName>
        <inlineHelpText>How was your booking process and slot scheduling experience?</inlineHelpText>
        <label>Review Booking Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Comment__c</fullName>
        <label>Review Comment</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>